--- a/css/reen.css
+++ b/css/reen.css
@@ -12,12 +12,12 @@ body {
 .latest_works .imgs .container,.work .container,footer .container,.bottom .container
 {
     width:1140px;
-    margin:0 auto;
-    padding:0 15px;
+    margin:0 auto; 
     height:auto;
     text-align:center;
 
 }
+
 
 .hamburger-menu{ 
     display:none;
@@ -88,7 +88,16 @@ margin-right:20px;
         color: #73879c;
         font-size: 12px;
     }
+.contact li .fa
+{
+    
+    font-family: 'Source Sans Pro';
+}
 
+.fa-envelope-o:before, .fa-mobile:before
+{
+    font-family:'FontAwesome';
+}
 .navbar_header .social {
     margin: 0 0 0 auto;
 
@@ -107,24 +116,63 @@ ul .social {
 
 .social li a {
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 .contact li a:hover,
-.social li a:hover,
 .menu .menu_items li a:hover,.menu .container .search:hover{
     color: #00BC9C;
+}
+.social li a:hover{
+    color: #fff;
+}
+.social li{
+    height: 32px;
+    width: 36px;
+}
+.social li:hover:first-child{
+    background-color: #4567b3;
+    
+}
+.social li:hover:nth-child(2){
+    background-color: #dd5745;
+    
+}
+.social li:hover:nth-child(3){
+    background-color: #2fbbed;
+    
+}
+.social li:hover:nth-child(4){
+    background-color: #d94347;
+    
+}
+.social li:hover:nth-child(5){
+    background-color: #2f79ff;
+    
+}
+.social li:hover:nth-child(6){
+    background-color: #eb6397;
+    
+}
+.social li:hover a
+{
+    color: #fff;
+}
+.menu .container{
+    position: relative;
 }
 .menu .container .search{ 
 color:#506A85;
     margin: 0 0 0 auto;
-    line-height: 1.5;
+    line-height: 3;
+    margin-right: 5px;
 }
 /*menu              */
 .menu {
     background-color:#fff;
 }
 .menu .container {
-    padding:30px 0;
+    padding:20px 0;
     
 }
 
@@ -136,7 +184,7 @@ color:#506A85;
     display: flex;
     margin-left: 5%;
     cursor: pointer;
-    line-height: 0;
+    
 }
     .menu .menu_items li .search
     {
@@ -145,8 +193,8 @@ color:#506A85;
     .menu .menu_items li a {
         color: #506A85;
         font-size: 15px;
-        margin-left: 10px;
-        padding: 3px;
+       
+        padding:20px;
         font-weight: 700;
         text-align: center;
         text-decoration: none;
@@ -155,7 +203,7 @@ color:#506A85;
 
     .menu .menu_items li {
         background-color: #fff;
-        padding-right:5px
+        
         
     }
 
@@ -171,55 +219,154 @@ color:#506A85;
     color:#00BC9C;
 }
 .navbar .menu .menu_items .menu_i a:hover{
-    padding-bottom:30px;
+   
 }
 
 .navbar .menu .menu_items li .mega .inner {
     position: absolute;
     width: auto;
     height: auto;
-    margin-top: 30px;
     padding: 20px 0;
     display: flex;
-    background-color: #F2F5F7;
+    background-color: #f5f7fa;
     text-align: left;
-    z-index: 10000;
-    border: 1px solid #506a85;
+    border:1px solid #e6e9ed;
     color: #73879C;
     line-height: 1.5;
-    left:10%;
-    right:10%;
+    left:0;
     padding-right:10px;
+    font-family:'Source Sans Pro';
 }
 
 
 .navbar .menu .menu_items .menu_i:hover .mega {
   display:block;
+    position: absolute;
+    width: 100%;
+    left: 0;
+    padding: 10px 0 0 0;
+    z-index: 1000;
+   
 }
-.navbar .menu .menu_items li a:hover {
-    background-color: #F2F5F7;
-    border-radius: 5px;
-    
+.navbar .menu .menu_items .menu_i:hover > a
+{
+     background-color: #f5f7fa;
+    border-radius: 3px;
+    border:1px solid #e6e9ed;
 }
 
-  .mega img {
-    width: 95px;
-    height: 80px;
-    margin-bottom: 5px;
-  }
+.navbar .menu .menu_items li a:hover {
+    background-color: #f5f7fa;
+    border-radius: 3px;
+    border:1px solid #e6e9ed;
+    
+}
+.logo_brand
+{
+    padding-top: 10px;
+}
+ 
 
 .navbar .menu .menu_items li .mega .inner div {
     width: 24%;
-margin:0 auto;
 font-size:14px;
 }
 
 .mega h4 {
     color: #506a85;
-    text-align: center;
+    text-align: left;
 }
 .inner h4{
     font-family:'Source Sans Pro';
+}
+.mega .inner .focus 
+{
+    padding-left: 40px;
+}
+.mega .inner .focus img
+{
+    width: 230px;
+    height: 120px;
+    
+}
+.menu_items .mega .inner .overs img,footer .container img
+{
+     width: 100px;
+    height: 80px;
+    
+    margin-bottom: 5px;
+}
+
+.menu_items .mega .inner .overs .first,.menu_items .mega .inner .overs .second,.menu_items .mega .inner .overs .third,footer .container .first,footer .container .second,footer .container .mob{
+    display: flex;
+}
+
+.mega .inner .focus .img_overlay
+{
+    
+    width: 230px;
+    height: 120px;
+    position: relative;
+    
+}
+.menu_items .mega .inner .overs .first .img_overlay,.menu_items .mega .inner .overs .second .img_overlay,.menu_items .mega .inner .overs .third .img_overlay,footer .container .first .img_overlay,footer .container .second .img_overlay{
+       width:auto;
+    height: 80px;
+    position: relative;
+}
+
+.menu_items .mega .inner .overs .img_overlay,footer .container .img_overlay,footer .container .img_overlay{
+    margin: 5px 5px 5px 0;
+}
+
+.menu_items .mega .inner .focus .img_overlay .overlay{
+    width: 230px;
+    position: absolute;
+    background-color: #00BC9C;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: .5s ease;
+        
+}
+.menu_items .mega .inner .overs .img_overlay .overlay,footer .container .first .img_overlay .overlay,footer .container .second .img_overlay .overlay{
+    width: 100px;
+  position: absolute;
+    background-color: #00BC9C;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: .5s ease;
+}
+
+.mega .inner .focus .img_overlay .overlay:hover,.menu_items .mega .inner .overs .img_overlay .overlay:hover,footer .container .img_overlay .overlay:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+
+
+
+.menu_items .mega .inner .overs .img_overlay .overlay span,footer .container .img_overlay .overlay span
+{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+  
+.mega .inner .focus figure
+{
+    margin-left: 0;
 }
 .navbar .menu .menu_items li .mega .inner .bt {
    
@@ -228,21 +375,35 @@ font-size:14px;
     cursor: pointer;
     color: #fff;
     font-weight: bold;
+    border-radius: 3px;
 }
 .navbar .menu .menu_items li .mega .inner .bt:hover{
     border-radius: 0;
 }
 
 .mega .mega_list {
-    list-style-type: circle;
-    line-height: 1.3;
+    list-style:none;
+    line-height:1.2;
+    padding-left:18px;
 
 }
 
 .mega .mega_list li {
-    background-color: #F2F5F7;
+    background-color:  #f5f7fa;
 }
-
+.mega .mega_list li::before{
+    color:#00BC9C;
+ content: "\25E6";
+ font-weight: bolder;
+ font-size: 21px;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+.navbar .menu .menu_items .menu_i a:hover
+{
+        border-radius: 5px 5px 0 0;
+}
 
 
 
@@ -251,7 +412,7 @@ font-size:14px;
 
 .wrapper {
     width: 100%;
-    margin-top: -10px;
+    
     text-align: center;
     color: #fff;
 }
@@ -300,21 +461,22 @@ font-size:14px;
 
 
 
-.slick-prev, .slick-next {
+.wrapper .slick-prev,.wrapper .slick-next {
     z-index: 1000;
 }
 
-.slick-arrow {
+.wrapper .slick-arrow {
     color: #00BC9C;
 }
 
-.slick-prev {
+.wrapper .slick-prev {
     left: 5%;
 }
 
-.slick-next {
+.wrapper .slick-next {
     right: 5%;
 }
+
 
 .slick-dots li button:before {
     color: #00BC9C;
@@ -322,21 +484,48 @@ font-size:14px;
     font-size: 20px;
 }
 
-.slick-prev:before, .slick-next:before {
-    color: #00BC9C;
-    width:50px;
+
+.wrapper .slick-prev:before
+{
+        content: "\2039";
+    font-size: 60px;
+    color: #e6e9ed;
+    line-height: 0;
+}
+.wrapper .slick-next:before{
+    content:"\203A";
+     font-size: 60px;
+    color: #e6e9ed;
+    line-height: 0;
 }
 
+.wrapper .slick-prev.slick-arrow,.wrapper .slick-next.slick-arrow{
+    width: 60px;
+    height: 60px;
+    border-radius: 3px;
+    background-color: #506a85;
+    opacity: 0.3;
+}
+.wrapper .slick-prev.slick-arrow:hover,.wrapper .slick-next.slick-arrow:hover{
+     opacity:1;
+}
+.wrapper .slick-prev.slick-arrow:hover.slick-prev:before,.wrapper .slick-next.slick-arrow:hover.slick-next:before{
+    color: #00BC9C;
+} 
 .slick-dots li.slick-active button:before {
     color: #506A85;
     opacity: 1;
 }
 
 .slick-dots {
-    bottom:0;
-    background-color: #fff;
+    display: inline-block;
+    position: relative;
     width: auto;
-    left: 44%;
+    background-color: #fff;
+    bottom: 25px;
+    padding: 10px 5px;
+    border-radius: 3px;
+    margin: 0 auto;
 }
 
 .wrapper .container {
@@ -523,13 +712,13 @@ font-size:14px;
     transition: .5s ease;
 }
 
-.latest_works .container_fig .figure figure .img_overlay:hover .overlay {
+.latest_works .container_fig .figure figure .img_overlay:hover .overlay, .menu_items .mega .inner .focus .img_overlay:hover .overlay{
     opacity: 1;
     cursor: pointer;
 }
 
 
-.latest_works .container_fig .figure figure .img_overlay .overlay span {
+.latest_works .container_fig .figure figure .img_overlay .overlay span, .menu_items .mega .inner .focus .overlay span {
     color: white;
     font-size: 40px;
     font-weight: bold;
@@ -569,7 +758,11 @@ font-size:14px;
 
 }
 .wrap .slick-dots {
-    left: 47%;
+    
+    display:block;
+    position: relative;
+    width: auto;
+    margin: 0 auto;
     bottom: -30px;
     background-color: #F2F5F7;
 }
@@ -612,25 +805,23 @@ footer {
     text-align: center;
 }
 
-
+footer .mob
+{
+    display: none;
+}
 .bottom .container {
     height: auto;
     justify-content: space-between;
 
 }
 
-footer .container img {
-    width: 120px;
-
-    height: 80px;
-
-}
   footer .container div {
     margin-right: 20px;
   }
     
-    footer .container img:hover {
-      cursor: pointer;
+footer .container .none
+    {
+        display: none;
     }
 
 footer h4 {
@@ -709,13 +900,10 @@ form input[type=submit]:hover {
 }
 
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 920px) {
 .menu .menu_items {
         display: none;
     }
-
-
-
 
 }
 
@@ -821,40 +1009,69 @@ form input[type=submit]:hover {
         cursor:pointer;
     }
 
-/*
-.hamburger-menu{
-    right: -100%;
-}
-*/
 
 
 
-
-@media only screen and (max-width:1199px) and (min-width:700px) {
+@media only screen and (max-width:1199px) and (min-width:920px) {
     .navbar_header .container, .menu .container, .wrapper .container,
     .who_we_are .container, .latest_works .container, .latest_works .container_fig,
     .latest_works .imgs .container, .work .container, footer .container, .bottom .container {
         width: auto;
         padding: 0 15px;
         height: auto;
+       margin-left: 3%;
+        margin-right: 3%;
     }
 
-    .menu .menu_items li a {
-        padding: 0;
+ .navbar .menu .menu_items li .mega .inner
+    {
+         width: auto;
+        padding: 0 15px;
+        height: auto;
+       margin-left: 1%;
+        margin-right: 1%; 
     }
 
     .menu .menu_items li a {
         font-size: 12px;
         font-weight: bold;
-    }
-
-    .menu .menu_items .menu_i {
-        width: 95px;
+        padding: 12px;
     }
 
     .menu .container {
-        padding: 30px 15px;
+        padding: 15px;
     }
+    .mega .inner .focus img
+{
+    width: 170px;
+   
+    
+}
+.mega .inner .focus .img_overlay
+{
+    
+    width: 170px;
+   
+    
+}
+.menu_items .mega .inner .focus .img_overlay .overlay{
+    width: 170px;
+
+        
+}
+    
+.menu_items .mega .inner .overs img
+{
+     width: 85px;
+   
+    
+}
+
+.menu_items .mega .inner .overs .img_overlay .overlay{
+    width: 85px;
+    
+   
+}
 
     .wrapper .container h2 {
         padding: 0;
@@ -878,18 +1095,13 @@ form input[type=submit]:hover {
         font-size: 16px;
     }
 
-    .wrap .slick-dots {
-        left: 45%;
-    }
+   
 
     footer p, form ::placeholder {
         font-size: 12px;
     }
 
-    footer .container img {
-        width:70%;
-        height:80px;
-    }
+   
 }
 
 
@@ -898,15 +1110,19 @@ form input[type=submit]:hover {
 
 
 
-
-@media only screen and (max-width:700px) {
-    .navbar_header .container, .menu .container, .wrapper .container,
-    .who_we_are .container, .latest_works .container, .latest_works .container_fig,
-    .latest_works .imgs .container, .work .container, footer .container, .bottom .container {
+@media only screen and (max-width:919px) {
+   .wrapper .container,
+    .who_we_are .container, .latest_works .container, .latest_works .container_fig,.latest_works .imgs .container, .work .container, footer .container, .bottom .container{
         width: auto;
         padding: 0 15px;
         height: auto;
+        margin: 100px 2%;
     }
+     .navbar_header .container, .menu .container
+    {
+        margin: 0 2%;
+    }
+   
     .hamburger-menu{
         display:block;
     }
@@ -957,19 +1173,14 @@ form input[type=submit]:hover {
         font-size: 14px;
     }
 
-    .wrap .slick-dots {
-        left: 40%
-    }
-
-    .wrapper .slick-dots {
-        left: 29%;
-    }
+   
+   
         
     
     footer .container
     {
         display:block;
-        margin:0 auto;
+        margin:0 2%;
     }
         footer .container div{
             width:100%;
@@ -1042,4 +1253,53 @@ form input[type=submit]:hover {
     .wrapper .container h2{
         font-size:25px;
     }
+    
+    footer .container .first,footer .container .second {
+    display: flex;
+    justify-content: center;
 }
+    footer .container img 
+    {
+        width: 130px;
+        height: 80px;
+    }
+
+footer .container .first .img_overlay .overlay,footer .container .second .img_overlay .overlay{
+    width: 130px;
+  position: absolute;
+    background-color: #00BC9C;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: .5s ease;
+}
+    footer .container .first .img_overlay,footer .container .second .img_overlay{
+       width:auto;
+    height: 80px;
+    position: relative;
+}
+footer .container .img_overlay .overlay:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+  .wrapper .slick-prev:before
+{
+     
+    font-size: 30px;
+    
+}
+.wrapper .slick-next:before{
+     font-size: 30px;
+  
+}
+
+.wrapper .slick-prev.slick-arrow,.wrapper .slick-next.slick-arrow{
+    width: 30px;
+    height: 30px;
+    
+}
+}
+
