--- a/css/reen.css
+++ b/css/reen.css
@@ -947,14 +947,14 @@ form input[type=submit]:hover {
 .menu__btn {
     display: flex;
     align-items: center;
-    position: absolute;
+    position: fixed;
     width: 26px;
     height: 26px;
     cursor: pointer;
     z-index: 1;
     top: 8px;
     right: 5px;
-    z-index: 100000;
+    z-index: 5000000;
     color: #506A85;
    margin-right: 10px;
     margin-top: 5px;
