--- a/css/reen.css
+++ b/css/reen.css
@@ -1183,7 +1183,7 @@ form input[type=submit]:hover {
     footer .container
     {
         display:block;
-        margin:0 2%;
+        margin:0 auto;
     }
         footer .container div{
             width:100%;
