--- a/css/reen.css
+++ b/css/reen.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     border: none;
     overflow-x: hidden;
-    /*font-family: 'Source Sans Pro',AdobeInvisFont,MyriadPro-Regular;*/
+ 
 }
 
 /* containers */
@@ -909,10 +909,7 @@ form input[type=submit]:hover {
 }
 */
 
-.hamburger-menu
-{
-    position: relative;
-}
+
 #menu__toggle {
     opacity: 0;
     display: none;
@@ -951,13 +948,14 @@ form input[type=submit]:hover {
     width: 26px;
     height: 26px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 10000000;
     top: 8px;
     right: 5px;
-    z-index: 5000000;
+    
     color: #506A85;
    margin-right: 10px;
     margin-top: 5px;
+    left: 80%;
     
 }
 
@@ -985,8 +983,7 @@ form input[type=submit]:hover {
 .menu__box {
     display: block;
     position: fixed;
-    visibility: hidden;
-    top: 0;
+   top: 0;
     right: -100%;
     width: 200px;
     height: 100%;
@@ -1183,7 +1180,7 @@ form input[type=submit]:hover {
     footer .container
     {
         display:block;
-        margin:0 auto;
+        margin:0 2%;
     }
         footer .container div{
             width:100%;
@@ -1304,12 +1301,10 @@ footer .container .img_overlay .overlay:hover{
     height: 30px;
     
 }
-    .navbar_header{
+    .navbar_header
+    {
         display: none;
     }
-    
-    body{
-        overflow-x: hidden;
-    }
 }
-
+    
+   
